@@ -5,6 +5,9 @@ Changes for crash
 Unreleased
 ==========
 
+ - Python2.6/2.7 output now prints unicode strings correctly when using
+   csv output format
+
  - Do not try to execute sysinfo command when no servers are available.
 
  - Added the ``sysinfo`` command which queries the ``sys`` tables for
